# bdk-rpc-client

./: CHANGELOG.md  Cargo.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  zizmor.yml
tests/: test_rpc_client.rs
